# greentic-control-chain

./: .gitignore  Cargo.toml  LICENSE  README.md
.codex/: PR-RTR-CHAIN-01-ingress-control-chain-pack.md  PR-RTR-CHAIN-02.md  repo_overview.md
.github/workflows/: _reusable_rust.yml  ci.yml  dev-publish.yml  publish.yml
ci/: check_package_assets.sh  list_publishable_crates.sh  local_check.sh
component-src/controller/: Cargo.toml  Makefile  README.md  component.manifest.json
component-src/controller/schemas/: component.schema.json
component-src/controller/schemas/io/: input.schema.json  output.schema.json
component-src/controller/src/: lib.rs  qa.rs
component-src/controller/tests/: conformance.rs
pack/: README.md  pack.cbor  pack.yaml
pack/assets/: README.md
pack/components/controller/: README.md  component.manifest.json  component.wasm
pack/extensions/: control.json
pack/qa/: control-setup.json
src/: ingress_control.rs  lib.rs  pack.rs
tests/: controller_component_cli.rs  gtpack_packaging.rs  ingress_control_runtime.rs
