[package]
name = "greentic-control-chain"
version = "0.4.1"
edition = "2024"
description = "Control-chain service and tooling for Greentic workflows."
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-control-chain"
readme = "README.md"
keywords = ["greentic", "control-chain", "workflow"]
categories = ["command-line-utilities"]
include = [
    "src/**",
    "pack/**",
    "build/**",
    "tests/**",
    "Cargo.toml",
    "README*",
    "LICENSE*",
    "ci/**",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
regex = "1"

[dev-dependencies]
serde_json = "1"
