[package]
name = "controller"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.91"
description = "Greentic component controller"
repository = "https://github.com/controller"
build = "build.rs"
authors = ["remote"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component@0.6.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
greentic-interfaces-guest = { version = ">=0.5.0-0, <0.6.0-0", default-features = false, features = ["component-v0-6"] }
greentic-types = { version = ">=0.5.0-0, <0.6.0-0" }

[build-dependencies]
serde_json = "1"
greentic-types = { version = ">=0.5.0-0, <0.6.0-0" }

[dev-dependencies]
serde_json = "1"
